--- a/fase2/design.html
+++ b/fase2/design.html
@@ -14,7 +14,7 @@
     <div style="float: left;"><img src="img/Logo_de_la_UNAD.svg.png" style="width: 100px; margin-left: 30px;"></div>
 
     <ul id="buttons" style="font-family: 'Poppins', sans-serif; font-weight: 900;">
-        <li title="Acerca de"><a href="#acerca-de">Acerca de</a></li>
+        <li title="Acerca de"><a href="#acerca-de">Acerca deasasdas</a></li>
         <li title="Primer recurso digital"><a href="../fase1/index.html">Primer recurso digital</a></li>
         <li title="Temas"><a href="#temas">Temas</a></li>
         <li title="Inicio"><a href="#inicio">Inicio</a></li>
